중간 지점 찾기 어플 모여라

--- a/Moyeola/Moyeola/Main.storyboard
+++ b/Moyeola/Moyeola/Main.storyboard
@@ -200,7 +200,7 @@
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                        <state key="normal" title="마이 플레이스">
+                                        <state key="normal" title="예정된 회의">
                                             <color key="titleColor" systemColor="labelColor"/>
                                         </state>
                                         <connections>
